# panic-tda

./: .formatter.exs  .gitignore  CLAUDE.md  DESIGN.md  ELIXIR_PORT_INVESTIGATION.md  README.md  TODO.md  alembic.ini  experiment-config.json  main.py  mise.toml  mix.exs  pd-timings.txt  perform-clustering.sh  perform-experiment.sh  pyproject.toml  ruff.toml  run-doctor.sh  run-experiment.sh  run-script.sh  technical-report.md  test-config.json
.zed/: tasks.json
alembic/: env.py
alembic/versions/: 1038ac5c289b_add_started_at_and_completed_at_to_.py  83fb17def420_simplify_clustering_schema_use_medoid_.py  9c62d27ee223_add_unique_constraint_embedding_.py  c9611d0e807d_make_required_fields_non_optional_in_.py  caedeefdeae7_add_missing_db_constraints.py  d5147590cfc2_remove_experiment_id_from_.py  f0ec8e9694a0_remove_legacy_clusters_column.py  f102157468d4_add_cluster_table_and_update_.py  initial_initial_schema.py
backlog/: config.yml
backlog/completed/: task-02 - use-cosine-distance-for-clustering.md  task-05 - always-cluster-all-data.md  task-07 - Investigate-claude-code-crashes-during-database-queries.md  task-08 - improve-clustering-command-interface.md  task-10 - change-the-way-persistence-diagram-data-is-stored-in-runs_df.md  task-11 - Add-database-export-functionality-for-experiment-subsets.md  task-15 - refactor-CLI-commands-and-subcommands.md  task-16 - why-is-cluster-epsilon-being-set-to-0.6.md  task-17 - add-image-embeddings-back-into-the-workflow.md  task-18 - debug-semantic-drift-(cosine)-calculation.md  task-19 - Optimize-add_semantic_drift-function-performance.md  task-20 - Investigate-duplicate-rows-in-clusters-dataframe.md  task-22 - Refactor-cluster-embeddings-command-for-long-running-operations.md  task-24 - Fix-UUID-type-error-when-deleting-clustering-results.md  task-27 - add-functions-for-getting-the-medoid-invocation-associated-with-a-particular-cluster.md  task-29 - Refactor-clustering-schema-to-remove-deprecated-code-and-add-medoid-embeddings-FK.md  task-30 - further-simplification-of-clusering-schemas.md  task-33 - clustering-unique-constraint-error-for-STSBRoberta-embeddings.md  task-35 - identify-slow-tests-and-see-if-they-can-be-sped-up.md  task-37 - Add-unique-constraint-to-Embedding-table-for-invocation_id-+-embedding_model.md  task-38 - Create-minimal-reproducible-test-for-JinaClipVision-IndexError-with-batch-processing.md  task-39 - Clean-up-failed-invocations-and-enforce-data-integrity.md  task-43 - audit-optional-fields-in-schemas-py.md  task-44 - Make-doctor-command-output-more-detailed-with-specific-issues.md  task-45 - Clean-up-incomplete-runs-from-experiment-06826b10.md  task-49 - add-DummyVision-embedding-models.md  task-51 - Fix-doctor-PD-computation-memory-issues.md  task-59 - remove-excluded-experiments-to-a-new-db-file.md
backlog/tasks/: task-01 - turn-TODO.md-into-tasks.md  task-02 - use-cosine-distance-for-clustering.md  task-03 - test-cluster-embeddings-command.md  task-04 - cluster-production-embedding-data.md  task-04 - update-CLAUDE.md-with-overview-of-project-structure.md  task-05 - always-cluster-all-data.md  task-06 - fix-db-only-clustering-workflow.md  task-07 - Investigate-claude-code-crashes-during-database-queries.md  task-08 - improve-clustering-command-interface.md  task-09 - update-dataframe-code-to-pull-clusters-from-DB.md  task-10 - change-the-way-persistence-diagram-data-is-stored-in-runs_df.md  task-12 - investigate-embedding-normalisation.md  task-13 - clustering-API-quirks.md  task-14 - ensure-that-cluster-medoid-is-mapped-to-a-specific-invocation.md  task-15 - refactor-CLI-commands-and-subcommands.md  task-16 - why-is-cluster-epsilon-being-set-to-0.6.md  task-17 - add-image-embeddings-back-into-the-workflow.md  task-18 - debug-semantic-drift-(cosine)-calculation.md  task-19 - Optimize-add_semantic_drift-function-performance.md  task-21 - Update-clustering-results-handling-in-schemas.py.md  task-22 - Refactor-cluster-embeddings-command-for-long-running-operations.md  task-23 - sqlite-db-operations-audit.md  task-24 - Fix-UUID-type-error-when-deleting-clustering-results.md  task-25 - find-out-why-cluster-started-ended-at-timestamps-arent-working-anymore.md  task-26 - refactor-local.py-module-into-separate-ones-for-each-different-paper-deck.md  task-28 - add-ty-for-type-checking.md  (+48 more)
config/: batch12_diverse.json  crossover_tier1.json  experiment.example.json  flux_moondream_test.json  full_cartesian_36.json  penguin_campfire.json  red_apple.json  red_apple_all_models.json  runtime.exs  seasons_3x3.json  seasons_3x3_b.json  test.exs
docs/: poster.typ
elixir_port/: mise.toml
lib/: panic_tda.ex
src/: db.py  db_testing.py  embeddings.py  engine.py  models.py  schemas.py
src/R/: analysis.R  (+2 more)
test/: engine_test.exs  export_test.exs  lyapunov_stage_test.exs  panic_tda_test.exs  real_models_test.exs  resource_validation_test.exs  resume_test.exs  test_helper.exs
tests/: conftest.py  integration.py  test_analysis.py  test_art.py  test_cli.py  test_clustering.py  test_clustering_manager.py  test_clustering_schema.py  test_cpd.py  test_data_prep.py  test_datavis.py  test_db.py  test_doctor.py  test_embeddings.py  test_engine.py  test_export.py  test_genai_models.py  test_invocations.py  test_models.py  test_ray.py  test_schemas.py  test_tda.py  test_utils.py  test_visualisation.py
trajectory_tracer/: db.py  db_testing.py  embeddings.py  engine.py  main.py  models.py  schemas.py  tda.py  utils.py
(+131 files in other folders)
