[project]
name = "panic-tda"
version = "0.1.0"
description = "A package to collect traces of different AI trajectories under different initial conditions"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "accelerate>=1.4.0",
    "altair>=5.5.0",
    "connectorx>=0.4.2",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "giotto-ph>=0.2.4",
    "giotto-tda>=0.6.2",
    "humanize>=4.12.3",
    "persim>=0.3.7",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "plotnine>=0.14.5",
    "polars>=1.24.0",
    "protobuf>=6.30.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pyvips>=2.2.3",
    "ray>=2.44.0",
    "rich>=13.9.4",
    "ruff>=0.11.0",
    "ruptures>=1.1.9",
    "sentence-transformers>=4.0.2",
    "sentencepiece>=0.2.0",
    "sqlmodel>=0.0.23",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "typer>=0.15.2",
    "uuid-v7>=1.0.0",
    "vegafusion[embed]>=2.0.2",
    "vl-convert-python>=1.7.0",
]

[project.scripts]
panic-tda = "panic_tda.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["panic_tda"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests (deselect with '-m \"not benchmark\"')",
]
addopts = "-m 'not slow and not benchmark'"
# Show slowest tests
testpaths = ["tests"]
# Disable warnings during tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff.format]
# Enable preview style formatting.
preview = true

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
