[project]
name = "panic-tda"
version = "0.1.0"
description = "A package to collect traces of different AI trajectories under different initial conditions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.9.0",
    "alembic>=1.16.4",
    "altair>=5.5.0",
    "connectorx>=0.4.3",
    "diffusers>=0.34.0",
    "einops>=0.8.1",
    "giotto-ph>=0.2.4",
    "giotto-tda>=0.6.2",
    "humanize>=4.12.3",
    "persim>=0.3.8",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "plotnine>=0.15.0",
    "polars>=1.31.0",
    "protobuf>=6.31.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pyvips>=3.0.0",
    "ray>=2.48.0",
    "rich>=14.1.0",
    "ruff>=0.12.5",
    "ruptures>=1.1.9",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.0",
    "typer>=0.16.0",
    "uuid-v7>=1.0.0",
    "vegafusion[embed]>=2.0.2",
    "vl-convert-python>=1.8.0",
]

[project.scripts]
panic-tda = "panic_tda.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["panic_tda"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"
# Show slowest tests
testpaths = ["tests"]
# Disable warnings during tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
# Ignore unused imports in local modules since they change frequently
lint.per-file-ignores = { "src/panic_tda/local.py" = ["F401"], "src/panic_tda/local_modules/**/*.py" = ["F401"] }

[tool.ruff.format]
# Enable preview style formatting.
preview = true

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "pytest-xdist>=3.8.0",
]
